# indi-touch-meter

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-build.yml
data/: device_id.txt  members.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: device.rs  http.rs  members.rs  mod.rs  mqtt.rs
src/components/: comp-514.tsx  date-time-display.tsx  keyboard-demo.tsx  keyboard.tsx  screen-saver.tsx
src/components/ui/: MultiStepWizard.tsx  battery-status.tsx  brightness-controller.tsx  button-group.tsx  drawer.tsx  input-group.tsx  input-otp.tsx  mode-toggle.tsx  select.tsx  shutdown-reboot.tsx  status-bar.tsx  stepper.tsx  tooltip.tsx  wifi-controller.tsx  wifi-dialog.tsx
src/steps/: AudioFingerprint.tsx  DeviceId.tsx  HHID.tsx  InputSource.tsx  Members.tsx  Network.tsx  OTP.tsx  ObjectDetection.tsx  Summary.tsx  TVStatus.tsx  Welcome.tsx
