[package]
name = "indi-touch-meter"
version = "0.1.0"
description = "A self-installation utility built for Inditronics Touch People Meters, designed to streamline device setup and configuration for audience measurement systems."
authors = ["you"]
edition = "2021"

[lib]
name = "indi_touch_meter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
rustls = "0.22"
rustls-pemfile = "2"
anyhow = "1"
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
